# Calculus

./: .gitignore  README.md  _config.yml  calculus.in  com.github.carlos157oliveira.Calculus.json  com.github.carlos157oliveira.Calculus.json~  index.md  meson.build  org.example.App.json  org.example.App.json~  requirements.txt
calculus/: main.py
calculus/ui/: calculus_window.py  plot_window.py  window.py
calculus/ui/dialogs/: about_dialog.py  warning_dialog.py
calculus/utils/: dialogs.py  plots.py  sympy_handler.py
data/: calculus.gresource.xml  com.github.carlos157oliveira.Calculus.appdata.xml.in.in  com.github.carlos157oliveira.Calculus.desktop.in  com.github.carlos157oliveira.Calculus.desktop.in.in  com.github.carlos157oliveira.Calculus.gresource.xml  com.github.carlos157oliveira.Calculus.gschema.xml  meson.build  org.example.App.desktop.in  org.example.App.gschema.xml  style.css
data/icons/hicolor/48x48/apps/: integral.xcf
data/ui/: calculus_window.ui  menu.ui  plot_window.ui  window.ui
data/ui/dialogs/: about_dialog.ui.in  meson.build  warning_dialog.ui
po/: Calculus.pot  LINGUAS  POTFILES  POTFILES.in  es.po  it.po  it_IT.po  meson.build  pt_BR.po  sk.po  template.pot  tr.po
